--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dellpc.helo.MainActivity">
+    tools:context="com.dellpc.helo.MainActivity"
+    android:id="@+id/layout">
 
     <Button android:id="@+id/button"
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
         android:layout_height="wrap_content"
 
         android:layout_gravity="bottom|center_horizontal"
-        android:textColor="#ff0011"
+
         android:textSize="40sp"
         android:textStyle="bold|italic"
         android:layout_above="@+id/button"
@@ -34,7 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/name"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -43,9 +45,30 @@
         android:id="@+id/link"
         android:textColor="#000000"
         android:background="#bac4f9"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp">
+        android:layout_marginBottom="10dp"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true">
     </Button>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change background Color"
+        android:id="@+id/third"
+        android:textColor="#000000"
+        android:background="#bac4f9"
+        android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/inf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#bac4f9"
+        android:text="View information"
+        android:layout_below="@+id/third"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp" />
 
 </RelativeLayout>
