--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="red">#ff0000</color>
+    <color name="white">#fdfdfd</color>
+    <color name="hmm">#63dacc</color>
+    <color name="yellow">#f7ff00</color>
+    <color name="orange">#ffb300</color>
+    <color name="black">#000000</color>
 </resources>
