--- a/app/src/main/res/layout/laba4_layout.xml
+++ b/app/src/main/res/layout/laba4_layout.xml
@@ -105,4 +105,24 @@
             android:textStyle="bold|italic" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_weight="0.21"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Button
+            android:id="@+id/lab55"
+            android:layout_width="162dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:background="#bac4f9"
+            android:layout_marginStart="115dp"
+            android:text="Laba_5" />
+    </LinearLayout>
+
+
 </LinearLayout>
